[package]
name        = "podchamp"
version     = "0.2.1"
authors     = ["Rachel K <raech.kanati@gmail.com>"]
repository  = "https://github.com/rkanati/podchamp"
edition     = "2018"
description = "Fetches your podcasts"
readme      = "README.md"
license     = "MIT"
keywords    = ["podcast", "rss"]
categories  = ["command-line-utilities"]

[dependencies]
anyhow            = "1"
chrono            = "0.4"
clap              = "3.0.0-beta.2"
diesel_migrations = "1.4"
directories       = "3"
dotenv            = "0.15"
feed-rs           = "0.4"
reqwest           = "0.10"
url               = "2"

[dependencies.diesel]
version = "1.4"
features = ["sqlite", "chrono"]

[dependencies.tokio]
version = "0.2"
features = ["macros", "process"]

