[package]
name        = "podchamp"
version     = "0.4.0"
authors     = ["Rachel Knight <rachel@automorphi.city>"]
repository  = "https://github.com/rkanati/podchamp"
edition     = "2018"
description = "Fetches your podcasts"
readme      = "README.md"
license     = "MIT"
keywords    = ["podcast", "rss"]
categories  = ["command-line-utilities"]

[dependencies]
anyhow            = "1"
bytes             = "1"
chrono            = "0.4"
clap              = "3.0.0-beta.2"
diesel_migrations = "1.4"
directories       = "3"
feed-rs           = "0.6"
futures           = "0.3"
reqwest           = "0.11"
thiserror         = "1"
url               = "2"

[dependencies.diesel]
version = "1.4"
features = ["sqlite", "chrono"]

[dependencies.tokio]
version = "1"
features = ["macros", "process", "rt"]

